--- a/package.xml
+++ b/package.xml
@@ -53,6 +53,7 @@
   <build_depend>tf</build_depend>
   <build_depend>image_geometry</build_depend>
   <build_depend>pcl_conversions</build_depend>
+  <build_depend>pcl_ros</build_depend>
   
   <run_depend>OpenCV</run_depend>
   <run_depend>PCL</run_depend>
@@ -67,6 +68,7 @@
   <run_depend>tf</run_depend>
   <run_depend>image_geometry</run_depend>
   <run_depend>pcl_conversions</run_depend>
+  <run_depend>pcl_ros</run_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
