--- a/package.xml
+++ b/package.xml
@@ -54,6 +54,7 @@
   <build_depend>image_geometry</build_depend>
   <build_depend>pcl_conversions</build_depend>
   <build_depend>pcl_ros</build_depend>
+  <build_depend>image_transport</build_depend>
   
   <run_depend>OpenCV</run_depend>
   <run_depend>PCL</run_depend>
@@ -69,6 +70,7 @@
   <run_depend>image_geometry</run_depend>
   <run_depend>pcl_conversions</run_depend>
   <run_depend>pcl_ros</run_depend>
+  <run_depend>image_transport</run_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
