created node to project pcl using an sensor_msgs::camera_info projection matrix

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -65,20 +65,26 @@ include_directories(
   include
 )
 
-## Declare a cpp library
+## Fusion Nodelets
 add_library(image_cloud_nodelet
   src/fusion/image_cloud_nodelet.cpp
 )
 
-## Add cmake target dependencies of the executable/library
-## as an example, message headers may need to be generated before nodes
-# add_dependencies(image_cloud_nodelet image_cloud_generate_messages_cpp)
-
-## Specify libraries to link a library or executable target against
 target_link_libraries(image_cloud_nodelet
   ${catkin_LIBRARIES}
 )
 
+## Calibration Nodelets
+add_library(pcl_to_image
+  src/calibration/pcl_to_image_nodelet.cpp
+)
+
+target_link_libraries(pcl_to_image
+  ${catkin_LIBRARIES}
+)
+
+
+# Image enhancement Nodelets
 add_library(brightness
   src/image_enhancement/brightness.cpp
 )
