--- a/package.xml
+++ b/package.xml
@@ -55,7 +55,7 @@
   <build_depend>pcl_conversions</build_depend>
   <build_depend>pcl_ros</build_depend>
   <build_depend>image_transport</build_depend>
-  
+  <build_depend>dynamic_reconfigure</build_depend>  
   <run_depend>OpenCV</run_depend>
   <run_depend>PCL</run_depend>
   <run_depend>boost</run_depend>
@@ -71,6 +71,7 @@
   <run_depend>pcl_conversions</run_depend>
   <run_depend>pcl_ros</run_depend>
   <run_depend>image_transport</run_depend>
+  <run_depend>dynamic_reconfigure</run_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
