--- a/cfg/edge_detector.cfg
+++ b/cfg/edge_detector.cfg
@@ -5,12 +5,14 @@ from dynamic_reconfigure.parameter_generator_catkin import *
 
 gen = ParameterGenerator()
 
-gen.add("threshold1",    int_t,   0, "Canny edge filter threshold1", 50,  1, 400)
-gen.add("threshold2",    int_t,	  0, "Canny edge filter threshold1", 200,  1, 800)
+gen.add("threshold1",    double_t,   0, "Canny edge filter threshold1", 50,  1, 400)
+gen.add("threshold2",    double_t,	  0, "Canny edge filter threshold1", 200,  1, 800)
 gen.add("kernel_size",   int_t,	  0, "Canny and Laplace kernel size", 5,  3, 50)
+gen.add("L2gradient",	bool_t,	0,	"Canny use L2gradient", False)
 gen.add("subscribe_topic",   str_t,   0, "Subscribe Topic",  "")
 gen.add("publish_topic",     str_t,   0, "Subscribe Topic",  "")
 gen.add("publish_color",    bool_t,   0, "publish as color image",  True)
+
 
 filter_enum = gen.enum([ gen.const("Canny",    int_t, 0, "Canny"),
                        gen.const("Laplace",     int_t, 1, "Laplace")],
