--- a/cfg/edge_detector.cfg
+++ b/cfg/edge_detector.cfg
@@ -10,7 +10,7 @@ gen.add("threshold2",    double_t,	  0, "Canny edge filter threshold1", 200,  1,
 gen.add("kernel_size",   int_t,	  0, "Canny and Laplace kernel size", 5,  3, 50)
 gen.add("L2gradient",	bool_t,	0,	"Canny use L2gradient", False)
 gen.add("subscribe_topic",   str_t,   0, "Subscribe Topic",  "")
-gen.add("publish_topic",     str_t,   0, "Subscribe Topic",  "")
+gen.add("publish_topic",     str_t,   0, "Publish Topic",  "")
 gen.add("publish_color",    bool_t,   0, "publish as color image",  True)
 
 
