--- a/cfg/erode.cfg
+++ b/cfg/erode.cfg
@@ -7,7 +7,7 @@ gen = ParameterGenerator()
 
 gen.add("erosion_size",   int_t,	  0, "erosion element size", 1,  1, 50)
 gen.add("subscribe_topic",   str_t,   0, "Subscribe Topic",  "")
-gen.add("publish_topic",     str_t,   0, "Subscribe Topic",  "")
+gen.add("publish_topic",     str_t,   0, "Publish Topic",  "")
 
 element_forms = gen.enum([ gen.const("Rect",    int_t, 0, "Rect"),
                        gen.const("Cross",     int_t, 1, "Cross"),
