--- a/cfg/edge_detector.cfg
+++ b/cfg/edge_detector.cfg
@@ -20,4 +20,4 @@ filter_enum = gen.enum([ gen.const("Canny",    int_t, 0, "Canny"),
 
 gen.add("filter", int_t, 0, "filter selector", 0, 0, 1, edit_method=filter_enum)
 
-exit(gen.generate(PACKAGE, "image_clouud", "edge_detector"))
+exit(gen.generate(PACKAGE, "image_cloud", "edge_detector"))
