--- a/cfg/harris3d.cfg
+++ b/cfg/harris3d.cfg
@@ -13,4 +13,4 @@ gen.add("refine", bool_t, 0, " Whether the detected key points should be refined
 gen.add("subscribe_topic",   str_t,   0, "Subscribe Topic",  "")
 gen.add("publish_topic",     str_t,   0, "Publish Topic",  "")
 
-exit(gen.generate(PACKAGE, "image_clouud", "harris3d"))
+exit(gen.generate(PACKAGE, "image_cloud", "harris3d"))
