--- a/cfg/pcl_image.cfg
+++ b/cfg/pcl_image.cfg
@@ -24,4 +24,4 @@ feature_enum = gen.enum([ 	gen.const("Intesity",    	int_t, 0, "Intensity"),
 
 gen.add("feature", int_t, 0, "filter selector", 0, 0, 2, edit_method=feature_enum)
 
-exit(gen.generate(PACKAGE, "image_clouud", "pcl_image"))
+exit(gen.generate(PACKAGE, "image_cloud", "pcl_image"))
