fixed description in config file

--- a/cfg/pcl_image.cfg
+++ b/cfg/pcl_image.cfg
@@ -9,8 +9,8 @@ gen.add("subscribe_topic_pcl",		str_t,	 	0, "subscribe_topic_pcl", "")
 gen.add("subscribe_topic_img_info",	str_t,	 	0, "subscribe_topic_img_info", "")
 gen.add("publish_topic",			str_t,		0, "publish_image topic", "" )
 gen.add("image_tf_frame_id",		str_t,	 	0, "image tf frame id", "")
-gen.add("use_reference", 			bool_t, 	0, "use reference frame for time transformations", False)
-gen.add("reference_frame",			str_t,	 	0, "subscribe_topic_img_info", "")
+gen.add("use_reference", 			bool_t, 	0, "use reference frame for time transformation and publishing", False)
+gen.add("reference_frame",			str_t,	 	0, "reference frame for transformation and pointcloud publishing", "")
 gen.add("point_size", 				int_t, 		0, "draw point size", 1, 1, 30)
 gen.add("resize_faktor_x",			double_t,	0, "resize_faktor_x", 1, 0.01, 4 )
 gen.add("resize_faktor_y",			double_t,	0, "resize_faktor_y", 1, 0.01, 4 )
