--- a/cfg/pcl_image.cfg
+++ b/cfg/pcl_image.cfg
@@ -7,7 +7,8 @@ gen = ParameterGenerator()
 
 gen.add("subscribe_topic_pcl",		str_t,	 	0, "subscribe_topic_pcl", "")
 gen.add("subscribe_topic_img_info",	str_t,	 	0, "subscribe_topic_img_info", "")
-gen.add("publish_topic",			str_t,		0, "publish_image topic", "" )
+gen.add("publish_topic",			str_t,		0, "publish image topic", "" )
+gen.add("publish_topic_pcl",		str_t,		0, "publish pcl topic", "" )
 gen.add("image_tf_frame_id",		str_t,	 	0, "image tf frame id", "")
 gen.add("use_reference", 			bool_t, 	0, "use reference frame for time transformation and publishing", False)
 gen.add("reference_frame",			str_t,	 	0, "reference frame for transformation and pointcloud publishing", "")
@@ -20,9 +21,10 @@ gen.add("normal_search_radius",		double_t,	0, "normal search radious for normal 
 
 feature_enum = gen.enum([ 	gen.const("Intesity",    	int_t, 0, "Intensity"),
                        		gen.const("Normal",     		int_t, 1, "Normal"),
-                       		gen.const("Normal_and_Intensity",   int_t, 2, "Normal and Intensity")],
+                       		gen.const("Normal_and_Intensity",   int_t, 2, "Normal and Intensity"),
+                       		gen.const("Depth_discontinuity",   int_t, 3, "Depth discontinuity")],
                      		"select filter")
 
-gen.add("feature", int_t, 0, "filter selector", 0, 0, 2, edit_method=feature_enum)
+gen.add("feature", int_t, 0, "filter selector", 0, 0, 3, edit_method=feature_enum)
 
 exit(gen.generate(PACKAGE, "image_cloud", "pcl_image"))
