--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -135,7 +135,9 @@ add_executable(gui
   src/gui/simple_gui.cpp
   src/gui/filter_value.cpp
   src/gui/config_parser.cpp
-  src/gui/kitti_camera.cpp
+  src/gui/kitti/serializable.cpp
+  src/gui/kitti/camera.cpp
+  src/gui/kitti/tf.cpp
   src/gui/filelist.cpp
 )
 
