--- a/package.xml
+++ b/package.xml
@@ -40,9 +40,6 @@
   <!-- Use test_depend for packages you need only for testing: -->
   <!--   <test_depend>gtest</test_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
-  <build_depend>OpenCV</build_depend>
-  <build_depend>PCL</build_depend>
-  <build_depend>boost</build_depend>
   <build_depend>cv_bridge</build_depend>
   <build_depend>nodelet</build_depend>
   <build_depend>roscpp</build_depend>
@@ -56,10 +53,8 @@
   <build_depend>pcl_ros</build_depend>
   <build_depend>image_transport</build_depend>
   <build_depend>dynamic_reconfigure</build_depend>
+  <build_depend>kitti</build_depend>
     
-  <run_depend>OpenCV</run_depend>
-  <run_depend>PCL</run_depend>
-  <run_depend>boost</run_depend>
   <run_depend>cv_bridge</run_depend>
   <run_depend>nodelet</run_depend>
   <run_depend>roscpp</run_depend>
@@ -73,6 +68,7 @@
   <run_depend>pcl_ros</run_depend>
   <run_depend>image_transport</run_depend>
   <run_depend>dynamic_reconfigure</run_depend>
+  <run_depend>kitti</run_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
