--- a/cfg/continuous_calibration.cfg
+++ b/cfg/continuous_calibration.cfg
@@ -19,7 +19,8 @@ gen.add("windows_size",						int_t,		0, "window size for calibration", 9, 1, 40 
 gen.add("queue_size",						int_t,		0, "message filter queue", 30, 1, 100 )
 gen.add("tf_buffer_length",					int_t,		0, "tf buffer length in seconds", 30, 1, 500 )
 
-gen.add("grid_search_radius",				double_t,	0, "grid search radius", 0.2, 0.001, 2 )
+gen.add("grid_search_radius_axis",			double_t,	0, "grid search radius", 0.2, 0.001, 2 )
+gen.add("grid_search_radius_rotation",		double_t,	0, "grid search radius", 0.2, 0.001, 2 )
 gen.add("grid_search_steps",				int_t,		0, "grid steps to search in radius", 3, 1, 20 )
 
 gen.add("fusion_min_color",					int_t,		0, "prevent to dark points", 15, 1, 20)
